@@ -15,10 +15,6 @@ public class DMDInstallType extends CommonInstallType {
 	
 	public static final String INSTALLTYPE_ID = DeeCore.EXTENSIONS_IDPREFIX+"launching.deeDmdInstallType";
 	
-	private static final Path DMD_INSTALL_LIBRARY_PATH = new Path("src/phobos");
-	private static final Path DMD2_INSTALL_LIBRARY_PATH = new Path("src/druntime/import");
-	private static final Path DMD2_INSTALL_LIBRARYPHOBOS_PATH = new Path("src/phobos");
-	
 	@Override
 	public String getName() {
 		return "DMD";
@@ -40,16 +36,27 @@ public class DMDInstallType extends CommonInstallType {
 	protected void addDefaultLibraryLocations(IFileHandle executableLocation, List<LibraryLocation> locs) {
 		IEnvironment env = executableLocation.getEnvironment();
 		IPath installPath = executableLocation.getPath().removeLastSegments(3);
-		IPath path = installPath.append(DMD2_INSTALL_LIBRARY_PATH);
+		IPath path = installPath.append("src/druntime/import");
 		if(path.toFile().exists() && path.toFile().isDirectory()) {
 			// Found a D2 DMD install
 			addLibraryLocationFromPath(locs, env, path);
-			addLibraryLocationFromPath(locs, env, installPath.append(DMD2_INSTALL_LIBRARYPHOBOS_PATH));
-		} else {
-			// Can only be a D1 DMD install
-			path = installPath.append(DMD_INSTALL_LIBRARY_PATH);
+			addLibraryLocationFromPath(locs, env, installPath.append(new Path("src/phobos")));
+			return;
+		} 
+		path = installPath.append("src/phobos");
+		if(path.toFile().exists() && path.toFile().isDirectory()) {
+			// if "druntime/import" doesn't exist, it's likely a D1 DMD install
 			addLibraryLocationFromPath(locs, env, path);
+			return;
 		}
+		path = installPath.append("include/d/dmd/druntime/import");
+		if(path.toFile().exists() && path.toFile().isDirectory()) {
+			// Found a D2 DMD install with Unix style install
+			addLibraryLocationFromPath(locs, env, path);
+			addLibraryLocationFromPath(locs, env, installPath.append("include/d/dmd/phobos"));
+			return;
+		}
+		// TODO: should we throw an error?
 	}
 	
 }
